--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^1.30.0",
-    "@react-three/drei": "^10.7.7",
-    "react-dom": "^19.2.0",
-    "react": "^19.2.0",
-    "@react-three/fiber": "^9.4.2",
-    "three": "^0.181.2",
-    "three-stdlib": "^2.36.1",
-    "@mediapipe/tasks-vision": "^0.10.22-rc.20250304"
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
+    "@react-three/fiber": "8.15.16",
+    "@react-three/drei": "9.99.0",
+    "three": "0.160.0",
+    "three-stdlib": "2.29.4",
+    "@google/genai": "0.1.1",
+    "@mediapipe/tasks-vision": "0.10.9"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
